# Syn2bANI

./: .gitignore  BENCHMARK_REPORT.md  Cargo.toml  README.md  gbrt_model_runtime.json  gbrt_model_v2.json
benches/: benchmark.rs
src/: lib.rs  main.rs
src/cli/: db.rs  dist.rs  mod.rs  search.rs  sketch.rs  struct.rs  triangle.rs
src/core/: ani_calculator.rs  debias.rs  gbrt.rs  mod.rs  structure_analyzer.rs  synteny_builder.rs  tag_extractor.rs  tag_matcher.rs
src/enzyme/: digest.rs  mod.rs  registry.rs
src/io/: fasta_parser.rs  formatters.rs  mod.rs  sketch.rs  sketch_reader.rs
src/parallel/: mod.rs  simd.rs
src/utils/: fxhash.rs  mod.rs
tests/: integration_tests.rs
